@@ -727,6 +727,7 @@ raw&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
 <strong>DLCS_REQUEST_TIMEOUT</strong> = 444<br>
 <strong>DLCS_RSS</strong> = 'http://del.icio.us/rss/'<br>
 <strong>DLCS_WAIT_TIME</strong> = 4<br>
+<strong>HTTPS_PROXY</strong> = 'http://localhost:8080/'<br>
 <strong>HTTP_PROXY</strong> = 'http://localhost:8080/'<br>
 <strong>ISO_8601_DATETIME</strong> = '%Y-%m-%dT%H:%M:%SZ'<br>
 <strong>PREFERRED_ENCODING</strong> = 'UTF-8'<br>
@@ -738,12 +739,12 @@ raw&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
 <strong>__credits__</strong> = 'Frank Timmermann (original author), and in no<font color="#c040c0">\n</font>pa...o, me.gooz, mohangk, stumble.then.rise, clupprich'<br>
 <strong>__description__</strong> = "pydelicious.py allows you to access the web service of del.icio.us via it's API through Python."<br>
 <strong>__docformat__</strong> = 'restructuredtext en'<br>
+<strong>__license__</strong> = ''<br>
 <strong>__long_description__</strong> = 'The goal is to design an easy to use and fully functional Python interface to del.icio.us.'<br>
-<strong>__rcs_id__</strong> = ': __init__.py 60 2010-11-12 22:37:23Z berend.van.berkum '<br>
+<strong>__rcs_id__</strong> = ': __init__.py 61 2010-11-12 22:56:08Z berend.van.berkum '<br>
 <strong>__url__</strong> = 'http://code.google.com/p/pydelicious/'<br>
 <strong>__version__</strong> = '0.6'<br>
-<strong>delicious_v2_feeds</strong> = {'': '%(format)s', 'alerts': '%(format)s/alerts', 'popular': '%(format)s/popular', 'popular_tagged': '%(format)s/popular/%(tag)s', 'recent': '%(format)s/recent', 'tagged': '%(format)s/tag/%(tags)s', 'url': '%(format)s/url/%(urlmd5)s', 'urlinfo': 'json/urlinfo/%(urlmd5)s', 'user': '%(format)s/%(username)s', 'user_inbox': '%(format)s/inbox/%(username)s?private=%(key)s', ...}<br>
-<strong>v</strong> = (2, 6, 6, 'final', 0)</td></tr></table><p>
+<strong>delicious_v2_feeds</strong> = {'': '%(format)s', 'alerts': '%(format)s/alerts', 'popular': '%(format)s/popular', 'popular_tagged': '%(format)s/popular/%(tag)s', 'recent': '%(format)s/recent', 'tagged': '%(format)s/tag/%(tags)s', 'url': '%(format)s/url/%(urlmd5)s', 'urlinfo': 'json/urlinfo/%(urlmd5)s', 'user': '%(format)s/%(username)s', 'user_inbox': '%(format)s/inbox/%(username)s?private=%(key)s', ...}</td></tr></table><p>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
 <tr bgcolor="#7799ee">
 <td colspan=3 valign=bottom>&nbsp;<br>
